Feature/java spring upgrade (#76)
* Upgrade project to Java 21 and Spring Boot 3.3

* Java and spring upgrade

---------

Co-authored-by: stdmk <stdmk@>